--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -25,7 +25,7 @@
             overflow: hidden;
         }
         video {            
-            object-fit: cover;
+            object-fit: contain;
             width: 100%;
             height: 100%;
             border: none;
@@ -108,6 +108,7 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
+        <label>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -195,6 +196,7 @@
                             unlikedUsers[senderId]++;
                         }
                         updateUnlikesCount(senderId);
+
                     }
                 });
             });
@@ -233,11 +235,11 @@
                     cameraSelect.appendChild(option);
                 });
 
-                // Restore the previously selected camera
-                const savedCameraId = localStorage.getItem('selectedCameraId');
-                if (savedCameraId) {
-                    cameraSelect.value = savedCameraId;
-                }
+            // Restore the previously selected camera
+            const savedCameraId = localStorage.getItem('selectedCameraId');
+            if (savedCameraId) {
+                cameraSelect.value = savedCameraId;
+            }
             } else {
                 cameraSelect.innerHTML = '<option value="">Aucune caméra détectée</option>';
             }
@@ -289,9 +291,15 @@
 
             getLocalStream()
                 .then((stream) => {
+                    localStream = stream;
+                    localVideo.srcObject = stream;
+                    applyMicMute();
                     call = peer.call(peerId, stream);
                     call.on('stream', (remoteStream) => {
                         addRemoteVideo(peerId, remoteStream);
+                    });
+                    call.on('close', () => {
+                        removeRemoteVideo(peerId);
                     });
                 })
                 .catch((err) => {
@@ -300,19 +308,14 @@
         });
 
         hangupButton.addEventListener('click', () => {
+            if (localStream) {
+                localStream.getTracks().forEach(track => track.stop());
+            }
             if (call) {
                 call.close();
-                call = null;
-                // Close all peer connections
-                for (const key in peerConnections) {
-                    if (peerConnections[key]) {
-                        peerConnections[key].close();
-                    }
-                }
-                peerConnections = {};
-                // Remove all video elements
-                videoContainer.innerHTML = '';
             }
+            localVideo.srcObject = null;
+            videoContainer.querySelectorAll('.video-wrapper').forEach(wrapper => wrapper.remove());
         });
 
         muteCheckbox.addEventListener('change', () => {
@@ -323,129 +326,204 @@
             sendMuteSignal(muteRemoteCheckbox.checked);
         });
 
+        function saveSelectedCamera() {
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
+        }
+        async function changeCamera() {
+            const constraints = await updateCameraSelect();
+            if (localStream) {
+                localStream.getTracks().forEach(track => track.stop()); // Arrêter le stream actuel
+            }
+            const newStream = await navigator.mediaDevices.getUserMedia(constraints);
+            localStream = newStream;
+            localVideo.srcObject = newStream;
+            applyMicMute();
+        }
+        cameraSelect.addEventListener('change', () => {
+            saveSelectedCamera();
+            getLocalStream().then(stream => {
+                localVideo.srcObject = stream;
+            });
+             changeCamera();
+        });
+
+        peerId.addEventListener('input', () => {
+            const command = peerId.value.trim();
+            const unlikeButtons = document.querySelectorAll('.unlike-button');
+            unlikeButtons.forEach(button => {
+                if (command === '!unlike') {
+                    button.style.display = 'block';
+                } else {
+                    button.style.display = 'none';
+                }
+            });
+        });
+
         function addRemoteVideo(peerId, stream) {
-            const existingVideo = document.getElementById(`video-${peerId}`);
-            if (existingVideo) {
-                return;
-            }
 
-            const videoWrapper = document.createElement('div');
-            videoWrapper.className = 'video-wrapper';
-            videoWrapper.id = `video-${peerId}`;
+            if (!peerConnections[peerId]) {
+                const remoteWrapper = document.createElement('div');
+                remoteWrapper.className = 'video-wrapper';
+                remoteWrapper.id = `remote-wrapper-${peerId}`;
+                videoContainer.appendChild(remoteWrapper);
 
-            const video = document.createElement('video');
-            video.autoplay = true;
-            video.playsinline = true;
-            video.srcObject = stream;
+                const remoteVideo = document.createElement('video');
+                remoteVideo.autoplay = true;
+                remoteVideo.playsInline = true;
+                remoteWrapper.appendChild(remoteVideo);
 
-            const controls = document.createElement('div');
-            controls.className = 'controls';
+                const controls = document.createElement('div');
+                controls.className = 'controls';
+                remoteWrapper.appendChild(controls);
 
-            const likeButton = document.createElement('button');
-            likeButton.className = 'like-button';
-            likeButton.innerHTML = '❤️';
-            likeButton.onclick = () => {
-                sendLike(peerId);
-            };
+                const likeButton = document.createElement('button');
+                likeButton.className = 'like-button';
+                likeButton.innerText = '❤️';
+                likeButton.addEventListener('click', () => sendLike(peerId));
 
-            const unlikeButton = document.createElement('button');
-            unlikeButton.className = 'unlike-button';
-            unlikeButton.innerHTML = '⚡';
-            unlikeButton.style.display = 'none'; // Masqué par défaut
+                const unlikeButton = document.createElement('button');
+                unlikeButton.className = 'unlike-button';
+                unlikeButton.innerText = '⚡';
+                unlikeButton.style.display = 'none';
+                unlikeButton.addEventListener('click', () => sendUnlike(peerId));
 
-            unlikeButton.onclick = () => {
-                sendUnlike(peerId);
-            };
+                const likesCount = document.createElement('p');
+                likesCount.className = 'likes-count';
+                likesCount.innerText = 'Likes reçus: 0';
 
-            const likesCount = document.createElement('p');
-            likesCount.className = 'likes-count';
-            likesCount.innerHTML = `Likes reçus: ${likedUsers[peerId] || 0}`;
+                const unlikesCount = document.createElement('p');
+                unlikesCount.className = 'unlikes-count';
+                unlikesCount.innerText = 'Unlikes reçus: 0';
+                unlikesCount.style.display = 'none';
 
-            const unlikesCount = document.createElement('p');
-            unlikesCount.className = 'unlikes-count';
-            unlikesCount.innerHTML = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
-            unlikesCount.style.display = 'none'; // Masqué par défaut
+                controls.appendChild(likeButton);
+                controls.appendChild(unlikeButton);
+                controls.appendChild(likesCount);
+                controls.appendChild(unlikesCount);
 
-            controls.appendChild(likeButton);
-            controls.appendChild(unlikeButton);
-            controls.appendChild(likesCount);
-            controls.appendChild(unlikesCount);
-
-            videoWrapper.appendChild(video);
-            videoWrapper.appendChild(controls);
-            videoContainer.appendChild(videoWrapper);
+                controls.appendChild(controlsDiv);
+                controls.appendChild(videoWrapper);            }
         }
 
-        function sendLike(peerId) {
-            const conn = peer.connections[peerId];
-            if (conn) {
-                conn.send({ type: 'like' });
-                likedUsers[peerId] = (likedUsers[peerId] || 0) + 1;
-                updateLikesCount(peerId);
-            }
-        }
-
-        function sendUnlike(peerId) {
-            const conn = peer.connections[peerId];
-            if (conn) {
-                conn.send({ type: 'unlike' });
-                unlikedUsers[peerId] = (unlikedUsers[peerId] || 0) + 1;
-                updateUnlikesCount(peerId);
+        function removeRemoteVideo(peerId) {
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
+            if (videoWrapper) {
+                videoWrapper.remove();
             }
         }
 
         function updateLikesCount(peerId) {
-            const videoWrapper = document.getElementById(`video-${peerId}`);
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
             if (videoWrapper) {
-                const likesCountElement = videoWrapper.querySelector('.likes-count');
-                if (likesCountElement) {
-                    likesCountElement.innerHTML = `Likes reçus: ${likedUsers[peerId] || 0}`;
+                const likesCount = videoWrapper.querySelector('.likes-count');
+                if (likesCount) {
+                    likesCount.innerText = `Likes reçus: ${likedUsers[peerId] || 0}`;
                 }
             }
         }
 
         function updateUnlikesCount(peerId) {
-            const videoWrapper = document.getElementById(`video-${peerId}`);
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
             if (videoWrapper) {
-                const unlikesCountElement = videoWrapper.querySelector('.unlikes-count');
-                if (unlikesCountElement) {
-                    unlikesCountElement.innerHTML = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
+                const unlikesCount = videoWrapper.querySelector('.unlikes-count');
+                if (unlikesCount) {
+                    unlikesCount.innerText = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
+                    if (unlikedUsers[peerId] > 0) {
+                        unlikesCount.style.display = 'block';
+                    }
                 }
+                localStorage.setItem('excludedUser', senderId);
+                setTimeout(() => {
+                    if (localStorage.getItem('excludedUser') === senderId) {
+                        document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                        throw new Error("L'utilisateur est exclu");
+                    }
+                }, 5000);
             }
         }
 
-        // Remove permissions after they have been granted once
-        function removePermissions() {
-            navigator.permissions.query({ name: 'microphone' }).then((permission) => {
-                if (permission.state === 'granted') {
-                    navigator.permissions.revoke({ name: 'microphone' });
-                }
+        function sendLike(peerId) {
+            const conn = peer.connect(peerId);
+            conn.on('open', () => {
+                conn.send({ type: 'like' });
             });
         }
 
-        // Save the selected camera ID
-        cameraSelect.addEventListener('change', () => {
-            localStorage.setItem('selectedCameraId', cameraSelect.value);
-        });
+        function sendUnlike(peerId) {
+            const conn = peer.connect(peerId);
+            conn.on('open', () => {
+                conn.send({ type: 'unlike' });
+                setTimeout(() => {
+                    removeRemoteVideo(peerId);
+                    if (call && call.peer === peerId) {
+                        call.close();
+                    }
+                }, 5000);
+            });
+        }
 
-        // Cleanup
-        window.addEventListener('beforeunload', () => {
-            if (call) {
-                call.close();
+        updateCameraSelect();
+
+(async function initialize() {
+            await updateCameraSelect();
+            const storedCameraId = localStorage.getItem('selectedCameraId');
+            if (storedCameraId) {
+                cameraSelect.value = storedCameraId;
             }
-            removePermissions();
-        });
+        })();
 
-        // Handle unlikes for a specific user
-        const excludedUser = localStorage.getItem('excludedUser');
-        if (excludedUser) {
+        function handleLike(senderId) {
+            if (!likedUsers[senderId]) {
+                likedUsers[senderId] = 1;
+            } else {
+                likedUsers[senderId]++;
+            }
+            updateLikeCounts(senderId);
+        }
+
+        function handleUnlike(senderId) {
+            if (!unlikedUsers[senderId]) {
+                unlikedUsers[senderId] = 1;
+            } else {
+                unlikedUsers[senderId]++;
+            }
+            updateLikeCounts(senderId);
+            localStorage.setItem('excludedUser', senderId);
             setTimeout(() => {
-                if (localStorage.getItem('excludedUser') === excludedUser) {
+                if (localStorage.getItem('excludedUser') === senderId) {
                     document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
                     throw new Error("L'utilisateur est exclu");
                 }
             }, 5000);
         }
+
+        function updateLikeCounts(peerId) {
+            const videoWrapper = document.getElementById(`videoWrapper-${peerId}`);
+            if (videoWrapper) {
+                const likeCount = likedUsers[peerId] || 0;
+                const unlikeCount = unlikedUsers[peerId] || 0;
+                videoWrapper.querySelector('.like-count').textContent = `Likes: ${likeCount}`;
+                videoWrapper.querySelector('.unlike-count').textContent = `Unlikes: ${unlikeCount}`;
+            }
+        }
+
+        setInterval(() => {
+            if (localStorage.getItem('excludedUser')) {
+                document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                throw new Error("L'utilisateur est exclu");
+            }
+            Object.keys(peerConnections).forEach(peerId => {
+                updateLikeCounts(peerId);
+            });
+        }, 5000);
+        window.addEventListener('beforeunload', () => {
+            if (localStream) {
+                localStream.getTracks().forEach(track => track.stop());
+            }
+            if (call) {
+                call.close();
+            }
+        });
     </script>
 </body>
 </html>
