--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -20,8 +20,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
-    max-width: 800px; /* Adjusted width for better fit on larger screens */
+    width: 320px;
+    height: 240px;
     margin-bottom: 20px;
 }
 
@@ -36,7 +36,7 @@ body {
 }
 
 video {
-    object-fit: cover;
+    object-fit: fill;
     width: 100%;
     height: 100%;
     border: none;
