--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -20,15 +20,11 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 320px;
-    height: 240px;
     margin-bottom: 20px;
 }
 
 .video-wrapper {
     position: relative;
-    width: 320px;
-    height: 240px;
     margin: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -36,7 +32,7 @@ body {
 }
 
 video {
-    object-fit: fill;
+    object-fit: contain;
     width: 100%;
     height: 100%;
     border: none;
